--- a/Parse/Parse.csproj
+++ b/Parse/Parse.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ParseClient.cs" />
+    <Compile Include="ParseFile.cs" />
     <Compile Include="ParseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialisedDate.cs" />
+    <Compile Include="SerialisedFile.cs" />
     <Compile Include="SerialisedObjectReference.cs" />
   </ItemGroup>
   <ItemGroup>
