New NUnit tests for creation/deletion/querying

--- a/ParseNUnitTests/ParseNUnitTests.csproj
+++ b/ParseNUnitTests/ParseNUnitTests.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tests.cs" />
+    <Compile Include="BasicAPITests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
